--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quotes-app",
-  "homepage": "https://wesscoby.github.io/quotes-app",
+  "name": "quotesapp",
+  "homepage": "https://quotesapp.tk",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && echo 'quotesapp.tk' > build/CNAME",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
